[gd_scene load_steps=43 format=3 uid="uid://bfp1xcdaowe3y"]

[ext_resource type="Script" path="res://scripts/enemy_slime.gd" id="1_5nmsr"]
[ext_resource type="Texture2D" uid="uid://8dio7pe8wtsm" path="res://arts/characters/enemies/slime.png" id="1_mdw26"]
[ext_resource type="AudioStream" uid="uid://ewrflj0mb7l3" path="res://music/slime-splat.mp3" id="3_38vuw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nxjuw"]
atlas = ExtResource("1_mdw26")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm6ag"]
atlas = ExtResource("1_mdw26")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp5ks"]
atlas = ExtResource("1_mdw26")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_riqig"]
atlas = ExtResource("1_mdw26")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l68ea"]
atlas = ExtResource("1_mdw26")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0fa4"]
atlas = ExtResource("1_mdw26")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iktcf"]
atlas = ExtResource("1_mdw26")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4wo0"]
atlas = ExtResource("1_mdw26")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6vmc"]
atlas = ExtResource("1_mdw26")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjx2r"]
atlas = ExtResource("1_mdw26")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15d72"]
atlas = ExtResource("1_mdw26")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkx5g"]
atlas = ExtResource("1_mdw26")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfjut"]
atlas = ExtResource("1_mdw26")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12gvd"]
atlas = ExtResource("1_mdw26")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2cyw"]
atlas = ExtResource("1_mdw26")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ijo"]
atlas = ExtResource("1_mdw26")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmr72"]
atlas = ExtResource("1_mdw26")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u0wl"]
atlas = ExtResource("1_mdw26")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5bek"]
atlas = ExtResource("1_mdw26")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fimks"]
atlas = ExtResource("1_mdw26")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axe51"]
atlas = ExtResource("1_mdw26")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw83d"]
atlas = ExtResource("1_mdw26")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6hrr"]
atlas = ExtResource("1_mdw26")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cubi4"]
atlas = ExtResource("1_mdw26")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi5h8"]
atlas = ExtResource("1_mdw26")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfka7"]
atlas = ExtResource("1_mdw26")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhidm"]
atlas = ExtResource("1_mdw26")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26rcu"]
atlas = ExtResource("1_mdw26")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vts72"]
atlas = ExtResource("1_mdw26")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2vp1"]
atlas = ExtResource("1_mdw26")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvlaf"]
atlas = ExtResource("1_mdw26")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jho4v"]
atlas = ExtResource("1_mdw26")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_seo6o"]
atlas = ExtResource("1_mdw26")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqghp"]
atlas = ExtResource("1_mdw26")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psopw"]
atlas = ExtResource("1_mdw26")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jrown"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxjuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm6ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp5ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riqig")
}],
"loop": true,
"name": &"slime_back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l68ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0fa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iktcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4wo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6vmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjx2r")
}],
"loop": true,
"name": &"slime_back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15d72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkx5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12gvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2cyw")
}],
"loop": true,
"name": &"slime_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ijo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmr72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u0wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5bek")
}],
"loop": true,
"name": &"slime_front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fimks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axe51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw83d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6hrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cubi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi5h8")
}],
"loop": true,
"name": &"slime_front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfka7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhidm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26rcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vts72")
}],
"loop": true,
"name": &"slime_side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2vp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvlaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jho4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seo6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqghp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psopw")
}],
"loop": true,
"name": &"slime_side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4cxd7"]
radius = 42.5793

[sub_resource type="CircleShape2D" id="CircleShape2D_l1s3i"]
radius = 17.2627

[sub_resource type="CircleShape2D" id="CircleShape2D_2k3t3"]
radius = 14.5602

[node name="enemy_slime" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(0, -1)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_5nmsr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_jrown")
animation = &"slime_front_idle"
offset = Vector2(0, -5)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(2, 1)
shape = SubResource("CircleShape2D_4cxd7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.09495e-13, -3)
rotation = 0.244849
shape = SubResource("CircleShape2D_l1s3i")

[node name="enemy_hitbox" type="Area2D" parent="."]
position = Vector2(4, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(-4, 0)
shape = SubResource("CircleShape2D_2k3t3")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -9.0
offset_top = 3.0
offset_right = 91.0
offset_bottom = 30.0
scale = Vector2(0.2, 0.2)
show_percentage = false

[node name="attack_cooldown_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_38vuw")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="body_shape_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_shape_entered"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown_timer" to="." method="_on_attack_cooldown_timer_timeout"]
